{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 11,
  "lineage": "d6b6557f-243c-bb77-b2a6-3647da077355",
  "resources": [
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082d645d7cbf18b97",
            "arn": "arn:aws:ec2:us-east-1:056183115561:instance/i-0285812f81a46e723",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0285812f81a46e723",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ebbe56991ed5849e",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_ip": "10.0.1.199",
            "public_ip": "54.84.249.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0038c1f7fc92abc6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa83386fbcac0dc7",
            "tags": {
              "Name": "Dev-vm"
            },
            "tags_all": {
              "Name": "Dev-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-059ac6f6f7219e6dd"
            ]
          },
          "dependencies": [
            "module.Dev.aws_security_group.main",
            "module.Dev.aws_subnet.pub_subnet1",
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:internet-gateway/igw-038f6cc8e7113660f",
            "id": "igw-038f6cc8e7113660f",
            "owner_id": "056183115561",
            "tags": {
              "Name": "Dev-my-igw"
            },
            "tags_all": {
              "Name": "Dev-my-igw"
            },
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "dependencies": [
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075dc198d7122b075",
            "original_route_table_id": "rtb-0bedfa548973df639",
            "route_table_id": "rtb-0803a790886578635",
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "dependencies": [
            "module.Dev.aws_internet_gateway.main",
            "module.Dev.aws_route_table.igw_route",
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:route-table/rtb-0803a790886578635",
            "id": "rtb-0803a790886578635",
            "owner_id": "056183115561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038f6cc8e7113660f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-test-rtb-igw"
            },
            "tags_all": {
              "Name": "Dev-test-rtb-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Dev.aws_internet_gateway.main",
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:security-group/sg-059ac6f6f7219e6dd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059ac6f6f7219e6dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main Security Group",
            "name_prefix": "",
            "owner_id": "056183115561",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-my-SG"
            },
            "tags_all": {
              "Name": "Dev-my-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-0fa83386fbcac0dc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fa83386fbcac0dc7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "Dev-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Dev-Public-Subnet-1"
            },
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "dependencies": [
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-080e139e85c644e18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-080e139e85c644e18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "Dev-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Dev-Public-Subnet-2"
            },
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "dependencies": [
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-028008f4c750c2093",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-028008f4c750c2093",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "Dev-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-1"
            },
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "dependencies": [
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-0e77ff4041711f05d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e77ff4041711f05d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "Dev-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-2"
            },
            "vpc_id": "vpc-05224758c357b45e1"
          },
          "dependencies": [
            "module.Dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:vpc/vpc-05224758c357b45e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c59e898a18286b8e",
            "default_route_table_id": "rtb-0bedfa548973df639",
            "default_security_group_id": "sg-09655ce92f3746f06",
            "dhcp_options_id": "dopt-030d34a35e9667740",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05224758c357b45e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bedfa548973df639",
            "owner_id": "056183115561",
            "tags": {
              "Name": "Dev"
            },
            "tags_all": {
              "Name": "Dev"
            }
          }
        }
      ]
    }
  ]
}